--- a/notebooks/bitcoin_link_prediction_examples_problems.ipynb
+++ b/notebooks/bitcoin_link_prediction_examples_problems.ipynb
@@ -13,10 +13,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 23,
+   "metadata": {},
    "outputs": [],
    "source": [
     "import os\n",
@@ -42,11 +40,11 @@
     "from sklearn.metrics import roc_auc_score as auc\n",
     "\n",
     "#from node2vec import node2vec as n2v\n",
-    "from node2vec import node2vec as n2v\n",
+    "#from node2vec import node2vec as n2v\n",
     "\n",
     "from importlib import reload\n",
     "\n",
-    "reload(n2v)\n",
+    "#reload(n2v)\n",
     "\n",
     "pd.options.mode.chained_assignment = None\n",
     "plt.style.use('ggplot')\n",
@@ -55,7 +53,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {
     "collapsed": true
    },
@@ -86,14 +84,208 @@
     "def hadamard(pair, model):\n",
     "    hadamard = np.dot(model.wv[pair[0]], model.wv[pair[1]])\n",
     "    \n",
-    "    return hadamard"
+    "    return hadamard\n",
+    "\n",
+    "# Modified version of https://github.com/aditya-grover/node2vec/blob/master/src/node2vec.py\n",
+    "import random\n",
+    "\n",
+    "class n2vGraph():\n",
+    "    def __init__(self, nx_G, is_directed, p, q):\n",
+    "        self.G = nx_G\n",
+    "        self.is_directed = is_directed\n",
+    "        self.p = p\n",
+    "        self.q = q\n",
+    "\n",
+    "    def node2vec_walk(self, walk_length, start_node):\n",
+    "        '''\n",
+    "        Simulate a random walk starting from start node.\n",
+    "        '''\n",
+    "        G = self.G\n",
+    "        alias_nodes = self.alias_nodes\n",
+    "        alias_edges = self.alias_edges\n",
+    "\n",
+    "        walk = [start_node]\n",
+    "\n",
+    "        while len(walk) < walk_length:\n",
+    "            cur = walk[-1]\n",
+    "            cur_nbrs = sorted(G.neighbors(cur))\n",
+    "            if len(cur_nbrs) > 0:\n",
+    "                if len(walk) == 1:\n",
+    "                    walk.append(cur_nbrs[alias_draw(alias_nodes[cur][0], alias_nodes[cur][1])])\n",
+    "                else:\n",
+    "                    prev = walk[-2]\n",
+    "                    next = cur_nbrs[alias_draw(alias_edges[(prev, cur)][0], \n",
+    "                        alias_edges[(prev, cur)][1])]\n",
+    "                    walk.append(next)\n",
+    "            else:\n",
+    "                break\n",
+    "\n",
+    "        return walk\n",
+    "\n",
+    "    def simulate_walks(self, num_walks, walk_length):\n",
+    "        '''\n",
+    "        Repeatedly simulate random walks from each node.\n",
+    "        '''\n",
+    "        G = self.G\n",
+    "        walks = []\n",
+    "        nodes = list(G.nodes())\n",
+    "        print('Walk iteration:')\n",
+    "        for walk_iter in range(num_walks):\n",
+    "            print(str(walk_iter+1), '/', str(num_walks))\n",
+    "            random.shuffle(nodes)\n",
+    "            for node in nodes:\n",
+    "                walks.append(self.node2vec_walk(walk_length=walk_length, start_node=node))\n",
+    "\n",
+    "        return walks\n",
+    "\n",
+    "    def get_alias_edge(self, src, dst):\n",
+    "        '''\n",
+    "        Get the alias edge setup lists for a given edge.\n",
+    "        '''\n",
+    "        G = self.G\n",
+    "        p = self.p\n",
+    "        q = self.q\n",
+    "\n",
+    "        unnormalized_probs = []\n",
+    "\n",
+    "        # PL mod: differentiate between graphs types (multi or not)\n",
+    "        # PL TODO: make random walk also along random connecting edgnes, not just 0th\n",
+    "        if isinstance(G, nx.multigraph.MultiGraph):\n",
+    "            for dst_nbr in sorted(G.neighbors(dst)):\n",
+    "                if dst_nbr == src:\n",
+    "                    # Multigraph TODO: can be more than one edge, 0 only the 1st one \n",
+    "                    unnormalized_probs.append(G[dst][dst_nbr][0]['weight']/p)\n",
+    "                elif G.has_edge(dst_nbr, src):\n",
+    "                    # Multigraph TODO: can be more than one edge, 0 only the 1st one\n",
+    "                    unnormalized_probs.append(G[dst][dst_nbr][0]['weight'])\n",
+    "                else:\n",
+    "                    # Multigraph TODO: can be more than one edge, 0 only the 1st one\n",
+    "                    unnormalized_probs.append(G[dst][dst_nbr][0]['weight']/q)\n",
+    "        else: # Is not multigraph:\n",
+    "            for dst_nbr in sorted(G.neighbors(dst)):\n",
+    "                if dst_nbr == src:\n",
+    "                    # Multigraph TODO: can be more than one edge, 0 only the 1st one \n",
+    "                    unnormalized_probs.append(G[dst][dst_nbr]['weight']/p)\n",
+    "                elif G.has_edge(dst_nbr, src):\n",
+    "                    # Multigraph TODO: can be more than one edge, 0 only the 1st one\n",
+    "                    unnormalized_probs.append(G[dst][dst_nbr]['weight'])\n",
+    "                else:\n",
+    "                    # Multigraph TODO: can be more than one edge, 0 only the 1st one\n",
+    "                    unnormalized_probs.append(G[dst][dst_nbr]['weight']/q)\n",
+    "        norm_const = sum(unnormalized_probs)\n",
+    "        normalized_probs =  [float(u_prob)/norm_const for u_prob in unnormalized_probs]\n",
+    "\n",
+    "        return alias_setup(normalized_probs)\n",
+    "\n",
+    "    def preprocess_transition_probs(self):\n",
+    "        '''\n",
+    "        Preprocessing of transition probabilities for guiding the random walks.\n",
+    "        '''\n",
+    "        G = self.G\n",
+    "        is_directed = self.is_directed\n",
+    "\n",
+    "        alias_nodes = {}\n",
+    "        for node in G.nodes():\n",
+    "            unnormalized_probs = [G[node][nbr][0]['weight'] for nbr in sorted(G.neighbors(node))]\n",
+    "            norm_const = sum(unnormalized_probs)\n",
+    "            normalized_probs =  [float(u_prob)/norm_const for u_prob in unnormalized_probs]\n",
+    "            alias_nodes[node] = alias_setup(normalized_probs)\n",
+    "\n",
+    "        alias_edges = {}\n",
+    "        triads = {}\n",
+    "\n",
+    "        if is_directed:\n",
+    "            for edge in G.edges():\n",
+    "                alias_edges[edge] = self.get_alias_edge(edge[0], edge[1])\n",
+    "        else:\n",
+    "            for edge in G.edges():\n",
+    "                alias_edges[edge] = self.get_alias_edge(edge[0], edge[1])\n",
+    "                alias_edges[(edge[1], edge[0])] = self.get_alias_edge(edge[1], edge[0])\n",
+    "\n",
+    "        self.alias_nodes = alias_nodes\n",
+    "        self.alias_edges = alias_edges\n",
+    "\n",
+    "        return\n",
+    "\n",
+    "\n",
+    "def alias_setup(probs):\n",
+    "    '''\n",
+    "    Compute utility lists for non-uniform sampling from discrete distributions.\n",
+    "    Refer to https://hips.seas.harvard.edu/blog/2013/03/03/the-alias-method-efficient-sampling-with-many-discrete-outcomes/\n",
+    "    for details\n",
+    "    '''\n",
+    "    K = len(probs)\n",
+    "    q = np.zeros(K)\n",
+    "    J = np.zeros(K, dtype=np.int)\n",
+    "\n",
+    "    smaller = []\n",
+    "    larger = []\n",
+    "    for kk, prob in enumerate(probs):\n",
+    "        q[kk] = K*prob\n",
+    "        if q[kk] < 1.0:\n",
+    "            smaller.append(kk)\n",
+    "        else:\n",
+    "            larger.append(kk)\n",
+    "\n",
+    "    while len(smaller) > 0 and len(larger) > 0:\n",
+    "        small = smaller.pop()\n",
+    "        large = larger.pop()\n",
+    "\n",
+    "        J[small] = large\n",
+    "        q[large] = q[large] + q[small] - 1.0\n",
+    "        if q[large] < 1.0:\n",
+    "            smaller.append(large)\n",
+    "        else:\n",
+    "            larger.append(large)\n",
+    "\n",
+    "    return J, q\n",
+    "\n",
+    "def alias_draw(J, q):\n",
+    "    '''\n",
+    "    Draw sample from a non-uniform discrete distribution using alias sampling.\n",
+    "    '''\n",
+    "    K = len(J)\n",
+    "\n",
+    "    kk = int(np.floor(np.random.rand()*K))\n",
+    "    if np.random.rand() < q[kk]:\n",
+    "        return kk\n",
+    "    else:\n",
+    "        return J[kk]\n",
+    "\n",
+    "\n",
+    "def learn_embeddings(walks, dimensions, window_size, workers, n_iter=1):\n",
+    "    '''\n",
+    "    Learn embeddings by optimizing the Skipgram objective using SGD.\n",
+    "    Transplanted from main.py and make Python 3 compatible\n",
+    "    '''\n",
+    "    \n",
+    "    # Python 2 or 3\n",
+    "    if sys.version_info.major < 3:\n",
+    "        walks = [map(str, walk) for walk in walks]\n",
+    "    else: # Python 3\n",
+    "        walks = [list(map(str,walk)) for walk in walks]\n",
+    "        \n",
+    "    model = Word2Vec(walks, size=dimensions, window=window_size, min_count=0, sg=1, workers=workers, iter=n_iter)\n",
+    "    #model.save_word2vec_format(args.output)\n",
+    "    return model"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Create the bitcoin transaction graph and extract key metrics"
+    "# Do link prediction on the bitcoin transaction network"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "save_me = False\n",
+    "graph_df = pd.read_csv(\"../data/btc_df.csv\")\n",
+    "graph_df.head()"
    ]
   },
   {
@@ -105,6 +297,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "55000\n",
       "Number of nodes: 16395\n",
       "Number of edges: 22869\n",
       "Number of train nodes: 8971\n",
@@ -138,24 +331,25 @@
       "18 / 20\n",
       "19 / 20\n",
       "20 / 20\n",
-      "CPU times: user 923 ms, sys: 7.17 ms, total: 930 ms\n",
-      "Wall time: 975 ms\n",
-      "CPU times: user 192 ms, sys: 2.86 ms, total: 194 ms\n",
-      "Wall time: 202 ms\n",
-      "CPU times: user 114 ms, sys: 888 µs, total: 115 ms\n",
-      "Wall time: 121 ms\n",
+      "CPU times: user 675 ms, sys: 278 µs, total: 675 ms\n",
+      "Wall time: 675 ms\n",
+      "CPU times: user 117 ms, sys: 1.38 ms, total: 119 ms\n",
+      "Wall time: 120 ms\n",
+      "CPU times: user 163 ms, sys: 10.4 ms, total: 174 ms\n",
+      "Wall time: 175 ms\n",
       "(29403, 4)\n",
       "246\n",
       "0.691062347911\n",
-      "0.789255449402\n",
-      "CPU times: user 95.9 ms, sys: 1.62 ms, total: 97.6 ms\n",
-      "Wall time: 110 ms\n",
-      "CPU times: user 1.04 ms, sys: 4 µs, total: 1.04 ms\n",
-      "Wall time: 1.04 ms\n",
-      "CPU times: user 885 µs, sys: 302 µs, total: 1.19 ms\n",
-      "Wall time: 962 µs\n",
+      "0.78259833015\n",
+      "CPU times: user 46.2 ms, sys: 38 µs, total: 46.2 ms\n",
+      "Wall time: 46.2 ms\n",
+      "CPU times: user 811 µs, sys: 6 µs, total: 817 µs\n",
+      "Wall time: 820 µs\n",
+      "CPU times: user 735 µs, sys: 180 µs, total: 915 µs\n",
+      "Wall time: 807 µs\n",
       "0.665441176471\n",
-      "0.90931372549\n",
+      "0.914215686275\n",
+      "56000\n",
       "Number of nodes: 16395\n",
       "Number of edges: 22869\n",
       "Number of train nodes: 9599\n",
@@ -189,24 +383,25 @@
       "18 / 20\n",
       "19 / 20\n",
       "20 / 20\n",
-      "CPU times: user 2.2 s, sys: 13.5 ms, total: 2.21 s\n",
-      "Wall time: 2.27 s\n",
-      "CPU times: user 232 ms, sys: 1.87 ms, total: 234 ms\n",
-      "Wall time: 236 ms\n",
-      "CPU times: user 195 ms, sys: 5.28 ms, total: 200 ms\n",
-      "Wall time: 203 ms\n",
+      "CPU times: user 2.06 s, sys: 14.2 ms, total: 2.07 s\n",
+      "Wall time: 2.1 s\n",
+      "CPU times: user 185 ms, sys: 708 µs, total: 185 ms\n",
+      "Wall time: 185 ms\n",
+      "CPU times: user 151 ms, sys: 5.27 ms, total: 156 ms\n",
+      "Wall time: 153 ms\n",
       "(48205, 4)\n",
       "351\n",
       "0.679586424853\n",
-      "0.786928117183\n",
-      "CPU times: user 131 ms, sys: 1.08 ms, total: 133 ms\n",
-      "Wall time: 133 ms\n",
-      "CPU times: user 1.42 ms, sys: 11 µs, total: 1.43 ms\n",
-      "Wall time: 1.43 ms\n",
-      "CPU times: user 1.29 ms, sys: 600 µs, total: 1.89 ms\n",
-      "Wall time: 1.44 ms\n",
+      "0.787506859956\n",
+      "CPU times: user 113 ms, sys: 84 µs, total: 113 ms\n",
+      "Wall time: 113 ms\n",
+      "CPU times: user 1.4 ms, sys: 13 µs, total: 1.41 ms\n",
+      "Wall time: 1.41 ms\n",
+      "CPU times: user 1.27 ms, sys: 487 µs, total: 1.76 ms\n",
+      "Wall time: 1.4 ms\n",
       "0.660655737705\n",
-      "0.877049180328\n",
+      "0.87868852459\n",
+      "57000\n",
       "Number of nodes: 16395\n",
       "Number of edges: 22869\n",
       "Number of train nodes: 10754\n",
@@ -240,24 +435,25 @@
       "18 / 20\n",
       "19 / 20\n",
       "20 / 20\n",
-      "CPU times: user 4.71 s, sys: 40.9 ms, total: 4.75 s\n",
-      "Wall time: 4.87 s\n",
-      "CPU times: user 469 ms, sys: 8.29 ms, total: 477 ms\n",
-      "Wall time: 488 ms\n",
-      "CPU times: user 319 ms, sys: 7.02 ms, total: 326 ms\n",
-      "Wall time: 329 ms\n",
+      "CPU times: user 3.94 s, sys: 17.8 ms, total: 3.96 s\n",
+      "Wall time: 3.99 s\n",
+      "CPU times: user 379 ms, sys: 4.22 ms, total: 383 ms\n",
+      "Wall time: 385 ms\n",
+      "CPU times: user 262 ms, sys: 5.12 ms, total: 268 ms\n",
+      "Wall time: 267 ms\n",
       "(79401, 4)\n",
       "499\n",
       "0.69762777183\n",
-      "0.800600999215\n",
-      "CPU times: user 130 ms, sys: 689 µs, total: 130 ms\n",
-      "Wall time: 131 ms\n",
-      "CPU times: user 9.13 ms, sys: 99 µs, total: 9.23 ms\n",
-      "Wall time: 9.25 ms\n",
-      "CPU times: user 1.54 ms, sys: 260 µs, total: 1.8 ms\n",
-      "Wall time: 1.68 ms\n",
+      "0.798793831103\n",
+      "CPU times: user 143 ms, sys: 562 µs, total: 143 ms\n",
+      "Wall time: 144 ms\n",
+      "CPU times: user 8.97 ms, sys: 57 µs, total: 9.03 ms\n",
+      "Wall time: 8.99 ms\n",
+      "CPU times: user 1.81 ms, sys: 527 µs, total: 2.34 ms\n",
+      "Wall time: 2 ms\n",
       "0.584107498341\n",
-      "0.812541473125\n",
+      "0.795288652953\n",
+      "58000\n",
       "Number of nodes: 16395\n",
       "Number of edges: 22869\n",
       "Number of train nodes: 14547\n",
@@ -290,63 +486,11 @@
       "17 / 20\n",
       "18 / 20\n",
       "19 / 20\n",
-      "20 / 20\n",
-      "CPU times: user 48min 4s, sys: 6.72 s, total: 48min 10s\n",
-      "Wall time: 11h 58min 34s\n",
-      "CPU times: user 40 s, sys: 408 ms, total: 40.4 s\n",
-      "Wall time: 1h 36s\n",
-      "CPU times: user 25.8 s, sys: 435 ms, total: 26.2 s\n",
-      "Wall time: 31.1 s\n",
-      "(6105765, 4)\n",
-      "6657\n",
-      "0.770120345501\n",
-      "0.557499816253\n",
-      "CPU times: user 27.9 ms, sys: 8.65 ms, total: 36.5 ms\n",
-      "Wall time: 50.6 ms\n",
-      "CPU times: user 2.84 ms, sys: 19 µs, total: 2.86 ms\n",
-      "Wall time: 2.85 ms\n",
-      "CPU times: user 2.24 ms, sys: 916 µs, total: 3.16 ms\n",
-      "Wall time: 2.38 ms\n",
-      "0.716900200172\n",
-      "0.840148698885\n",
-      "Number of nodes: 16395\n",
-      "Number of edges: 22869\n",
-      "Number of train nodes: 15123\n",
-      "Number of edges: 21256\n",
-      "Number of test nodes: 1345\n",
-      "Number of edges: 1613\n",
-      "Number of nodes: 3673\n",
-      "Number of edges: 7681\n",
-      "Number of nodes: 3563\n",
-      "Number of edges: 7342\n",
-      "Number of nodes: 135\n",
-      "Number of edges: 301\n",
-      "Walk iteration:\n",
-      "1 / 20\n",
-      "2 / 20\n",
-      "3 / 20\n",
-      "4 / 20\n",
-      "5 / 20\n",
-      "6 / 20\n",
-      "7 / 20\n",
-      "8 / 20\n",
-      "9 / 20\n",
-      "10 / 20\n",
-      "11 / 20\n",
-      "12 / 20\n",
-      "13 / 20\n",
-      "14 / 20\n",
-      "15 / 20\n",
-      "16 / 20\n",
-      "17 / 20\n",
-      "18 / 20\n",
-      "19 / 20\n",
       "20 / 20\n"
      ]
     }
    ],
    "source": [
-    "graph_df = pd.read_csv(\"../data/btc_df.csv\")\n",
     "# Filter out the mining transactions\n",
     "graph_df = graph_df.loc[~(graph_df.addr_from == 'mining'), :]\n",
     "graph_df = graph_df.rename(columns={'value': 'weight'})\n",
@@ -354,7 +498,7 @@
     "run_list = []\n",
     "for height_max in range(55000, 65000, 1000):\n",
     "    run_dict = {}\n",
-    "    print(height)\n",
+    "    print(height_max)\n",
     "    height_train = int(height_max*0.90)\n",
     "\n",
     "    run_dict['height_max'] = height_max\n",
@@ -424,7 +568,7 @@
     "    # node2vec parameters\n",
     "    p, q = 1,3\n",
     "\n",
-    "    G_n2v = n2v.Graph(G_train, True, p, q)\n",
+    "    G_n2v = n2vGraph(G_train, True, p, q)\n",
     "    G_n2v.preprocess_transition_probs()\n",
     "\n",
     "\n",
@@ -619,7 +763,8 @@
    "source": [
     "#run = pd.Series(run_dict)\n",
     "run_df.set_index('height_max', inplace=True)\n",
-    "run_df.to_csv('../results/n2v_runs.csv', header=False)\n",
+    "if save_me:\n",
+    "    run_df.to_csv('../results/n2v_runs.csv', header=False)\n",
     "run_df"
    ]
   },
