Add suggestion for last problem

--- a/notebooks/nlp_examples_problems.ipynb
+++ b/notebooks/nlp_examples_problems.ipynb
@@ -728,7 +728,9 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# Create target vectors: 1 for positive review, 0 for negative and train logistic regression classifier\n",
@@ -746,7 +748,9 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "bow_test = vectorizer.transform(test_pos_files + test_neg_files)\n",
@@ -1663,7 +1667,9 @@
   {
    "cell_type": "code",
    "execution_count": 25,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "if os.path.exists(\"../data/doc2vec_results.csv\"):\n",
@@ -1683,7 +1689,7 @@
     "\n",
     "* Give a brief explanation of what cross validation is, both as a way to measure model performance and a way to improve model generalization (i.e. predictive power on data the model has never seen).\n",
     "* Use the cross validation version of logistic regression and test if the error rate decreases. Explain your results (general arguments enough)\n",
-    "* Use a neural network as a sentiment classifier on the BoW count vectors and compare performance."
+    "* Use a neural network as a sentiment classifier on the BoW count vectors and compare performance, e.g. using Keras: https://keras.io/getting-started/sequential-model-guide/"
    ]
   }
  ],
