Add instructions about getting reviews

--- a/notebooks/nlp_examples_problems.ipynb
+++ b/notebooks/nlp_examples_problems.ipynb
@@ -567,6 +567,12 @@
    },
    "outputs": [],
    "source": [
+    "# First download the IMDB data from http://ai.stanford.edu/~amaas//data/sentiment/\n",
+    "# and put it in the data directory of your repository.\n",
+    "# Alternatively, you could use the code from \n",
+    "# https://github.com/munichpavel/gensim/blob/develop/docs/notebooks/doc2vec-IMDB.ipynb\n",
+    "# but then much of the fun (i.e. text cleansing) is done for you\n",
+    "\n",
     "# Read in imdb review\n",
     "imdb_dir = os.path.join(\"../data\", \"aclImdb\")\n",
     "train_dir = os.path.join(imdb_dir, \"train\")\n",
