Add grading scheme and stars to indicate difficulty

--- a/notebooks/bitcoin_link_prediction_examples_problems.ipynb
+++ b/notebooks/bitcoin_link_prediction_examples_problems.ipynb
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {
     "collapsed": true
    },
@@ -26,7 +26,6 @@
     "from pprint import pprint\n",
     "\n",
     "import requests\n",
-    "import requests_cache\n",
     "\n",
     "from itertools import combinations_with_replacement as cwr\n",
     "\n",
@@ -282,7 +281,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "save_me = False\n",
@@ -293,7 +294,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# Filter out the mining transactions\n",
@@ -438,7 +441,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "#run = pd.Series(run_dict)\n",
@@ -451,7 +456,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "fig_dir = \"../slides/figures\"\n",
@@ -480,13 +487,13 @@
     "\n",
     "Possible improvements:\n",
     "\n",
-    "1. Select sections of code to refactor as functions to both encapsulate and make the code more readable\n",
-    "2. Use dask or some other package to use parallelize the for loop\n",
-    "3. Refactor the split into train and test graphs to ensure a more consistent split between the number of training and testing nodes\n",
+    "1. `*` Select sections of code to refactor as functions to both encapsulate and make the code more readable\n",
+    "2. `**` Use dask or some other package to use parallelize the for loop\n",
+    "3. `**` Refactor the split into train and test graphs to ensure a more consistent split between the number of training and testing nodes\n",
     "\n",
     "### Improve node2vec link prediction\n",
     "\n",
-    "1. Change the parameters of node2vec (e.g. embedding dimension, number and length of walks, p, q) to try to increase the prediction power"
+    "1. `*` Change the parameters of node2vec (e.g. embedding dimension, number and length of walks, p, q) to try to increase the prediction power"
    ]
   },
   {
@@ -504,9 +511,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python [conda env:ra]",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "conda-env-ra-py"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
