--- a/notebooks/bitcoin_transactions_examples_problems.ipynb
+++ b/notebooks/bitcoin_transactions_examples_problems.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -18,7 +18,7 @@
        "<module 'risk_analytics.utils' from '/Users/pavel/py_pavel/QRM_workshops/risk_analytics/risk_analytics/utils.py'>"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 1,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -97,8 +97,8 @@
    "source": [
     "## Problems\n",
     "\n",
-    "1. At which height is the first non-mining bitcoin transaction?\n",
-    "2. How many connected components does the bitcoin transaction graph have?"
+    "1. `*` At which height is the first non-mining bitcoin transaction?\n",
+    "2. Assume that all mining fees come from the a single source, i.e a single node. How many connected components does the bitcoin transaction graph have?"
    ]
   },
   {
@@ -996,9 +996,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python [conda env:ra]",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "conda-env-ra-py"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
