--- a/notebooks/nlp_examples_problems.ipynb
+++ b/notebooks/nlp_examples_problems.ipynb
@@ -17,7 +17,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "metadata": {
     "collapsed": true
    },
@@ -543,7 +543,7 @@
     "## Problems\n",
     "For background on tf-idf, see http://scikit-learn.org/stable/tutorial/text_analytics/working_with_text_data.html or https://en.wikipedia.org/wiki/Tf–idf\n",
     "* Label and one hot encode the vocabulary of \"ce bi cebula ce ni imela, bi cebula bula bla\"\n",
-    "* Calculate the BoW count vectors for the two sentences: [\"ce bi cebula ce ni imela\", \"bi cebula bula bla\"] w.r.t. your encoding\n",
+    "* Calculate the BoW count vectors for the two sentences: [\"ce bi cebula ce ni imela\", \"bi cebula bula bla\"] using your encoding from the previous problem.\n",
     "* Calculate the tf-idf vectors of the two sentences above. Verify two entries of your vectors by hand."
    ]
   },
@@ -1694,16 +1694,25 @@
     "## Problems\n",
     "\n",
     "* Give a brief explanation of what cross validation is, both as a way to measure model performance and a way to improve model generalization (i.e. predictive power on data the model has never seen).\n",
-    "* Use the cross validation version of logistic regression and test if the error rate decreases. Explain your results (general arguments enough)\n",
-    "* Use a neural network as a sentiment classifier on the BoW count vectors and compare performance, e.g. using Keras: https://keras.io/getting-started/sequential-model-guide/"
+    "* `*` Use the cross validation version of logistic regression and test if the error rate decreases. Explain your results (general arguments enough)\n",
+    "* `***` Use a neural network as a sentiment classifier on the BoW count vectors and compare performance, e.g. using Keras: https://keras.io/getting-started/sequential-model-guide/"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python [conda env:ra]",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "conda-env-ra-py"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
